# zenoh-eyes

./: .gitmodules  README.md  config.json5  platformio.ini  z_sensor.py
arduino-zenoh-eyes/: .gitignore  platformio.ini
arduino-zenoh-eyes/schemas/: electric_eyes.fbs  eye_interface.fbs
arduino-zenoh-eyes/src/: controller.cpp  main.cpp  network.cpp
arduino-zenoh-eyes/tools/: fetch_flatbuffers.py  gen_flatbuffers.py
legacy/: _main.cpp
python-zenoh-eyes/: controller.py  debug_publisher.py  eye_publisher.py  eye_subscriber.py  pyproject.toml  tcp_router.json5  tui.py  tui2.py  udp_router.json5
python-zenoh-eyes/electric_eyes/: EyeCommand.py
src/: config.hpp  main.cpp
